[package]
name = "protohackers"
version = "0.1.0"
authors = ["Bostjan Meglic <bostjan@bmeglic.si"]
edition = "2021"
description = "Protohackers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
