[package]
name = "ph_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.28", features = ["derive"] }
futures = "0.3.26"
itertools = "0.10.5"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec", "net", "full"] }
