[package]
name = "ph_04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.7", features = ["full"] }
