[package]
name = "ph_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.27"
itertools = "0.10.5"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["full"] }
