[package]
name = "ph_06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["full", "codec"] }
